--- a/SLD.WEB/Views/Shared/_Layout.cshtml
+++ b/SLD.WEB/Views/Shared/_Layout.cshtml
@@ -14,6 +14,8 @@
     <link href="~/Css/sweetalert2.css" rel="stylesheet" />
     <link href="~/Css/jquery-ui.css" rel="stylesheet" />
     <link href="~/Css/jquery-ui.theme.css" rel="stylesheet" />
+    <link href="~/Css/fontawesome.css" rel="stylesheet" />
+    <link href="~/Css/solid.css" rel="stylesheet" />
 </head>
 <body style="background-color: #ecf0f5;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
