--- a/SLD.WEB/Views/Shared/_Layout.cshtml
+++ b/SLD.WEB/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="es">
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Practica</title>
@@ -19,7 +19,7 @@
 </head>
 <body style="background-color: #ecf0f5;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="@Url.Action("Index", "Home")">SIADPRO</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,8 +34,9 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <span style="color: white;">
+                    Usuario: Diego P.
+                </span>
             </form>
         </div>
     </nav>
