--- a/SLD.WEB/Views/Ventas/Index.cshtml
+++ b/SLD.WEB/Views/Ventas/Index.cshtml
@@ -2,17 +2,47 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    List<Venta> lVentas = (List<Venta>)ViewData["Ventas"];
 }
 
-<h3>Clientes</h3>
+<h3>Ventas</h3>
 <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-7">
         @Html.ActionLink("Nueva venta", "Nueva", "Ventas", null, new { @class = "btn btn-success" })
         <div class="box box-primary" style="margin-top: 5px;">
             <div class="box-body">
                 <div>
-                   
-                </div>
+                    @if (lVentas.Count() > 0)
+                    {
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col"></th>
+                                    <th scope="col">ID</th>
+                                    <th scope="col">Cliente</th>
+                                    <th scope="col">Fecha</th>
+                                    <th scope="col">Total</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var eVenta in lVentas)
+                                {
+                                    <tr>
+                                        <td></td>
+                                        <td>@eVenta.Id</td>
+                                        <td>@eVenta.NombreCliente</td>
+                                        <td>@eVenta.Fecha.ToShortDateString()</td>
+                                        <td>@eVenta.Total</td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    }
+                    else
+                    {
+                        <div>Sin resultados.</div>
+                    }
+                    </div>
             </div>
         </div>
     </div>
